chap06/6.7.1.1/apache.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ngx-pod-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: ngx-pod
        version: v2
    spec:
      containers:
      - name: http
        image: httpd
        ports:
        - containerPort: 80
